ticket batch update
